--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Beth+Ellen&display=swap');
+
 body {
-  padding: 50px;
-  background-color: #66CCFF;
+  background-color: #7e57c2;
   font-family: sans-serif;
 }
 
