--- a/client/src/todoStyles.css
+++ b/client/src/todoStyles.css
@@ -16,9 +16,9 @@
   font-size: 16px;
   margin: 10px;
   margin-right: 0px;
-  background-color: #0066FF;
+  background-color: #311b92;
   color: #FFF;
-  border: 2px solid #0066FF;
+  border: 2px solid #311b92;
 }
 
 .todoListMain .todoHeader button:hover {
