--- a/client/src/todoStyles.css
+++ b/client/src/todoStyles.css
@@ -6,24 +6,22 @@
 
 .todoListMain .todoHeader input {
   padding: 10px;
-  font-size: 16px;
+  margin: 10px;
+  font-size: 14px;
   border: 2px solid #FFF;
-  width: 165px;
+  width: 50%;
 }
 
 .todoListMain .todoHeader button {
-  padding: 10px;
-  font-size: 16px;
-  margin: 10px;
-  margin-right: 0px;
-  background-color: #311b92;
+  font-size: 14px;
+  background-color: #5e35b1;
   color: #FFF;
-  border: 2px solid #311b92;
+  border: 2px solid #5e35b1;
 }
 
 .todoListMain .todoHeader button:hover {
-  background-color: #003399;
-  border: 2px solid #003399;
+  background-color: #b39ddb;
+  border: 2px solid #b39ddb;
   cursor: pointer;
 }
 
